--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
+    <!-- 카카오맵 API KEY -->
+
+
+    <!-- TODO: src 대체하기->  process.env.REACT_APP_KAKAO_API_KEY  -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a6dd401fad8ebbf6e52d437f6fcda54&libraries=services,clusterer"
+    ></script>
     <!-- 구글 아이콘 -->
     <link
       rel="stylesheet"
