--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <!-- 카카오맵 API KEY -->
 
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <!-- 카카오맵 API KEY -->
 
-    <!-- TODO: src 대체하기->  process.env.REACT_APP_KAKAO_API_KEY  -->
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a6dd401fad8ebbf6e52d437f6fcda54&libraries=services,clusterer"
-    ></script>
-    <!-- 구글 아이콘 -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <title>편식</title>
-  </head>
+  <!-- TODO: src 대체하기->  process.env.REACT_APP_KAKAO_API_KEY  -->
+  <script type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a6dd401fad8ebbf6e52d437f6fcda54&libraries=services,clusterer"></script>
+  <!-- 구글 아이콘 -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <title>편식</title>
 
-  <body>
-    <div id="root"></div>
-  </body>
+  <!-- Kakao Share -->
+  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
+    integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
