--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
     <!-- 카카오맵 API KEY -->
+
+
+    <!-- TODO: src 대체하기->  process.env.REACT_APP_KAKAO_API_KEY  -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_API_KEY%&libraries=services,clusterer"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2a6dd401fad8ebbf6e52d437f6fcda54&libraries=services,clusterer"
     ></script>
     <!-- 구글 아이콘 -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <style>
-      .material-symbols-outlined {
-        font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 0, 'opsz' 24;
-      }
-    </style>
-
     <title>편식</title>
   </head>
 
