--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,32 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="shortcut icon" href="./favicon.ico">
+  <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="36x36" href="./favicon/android-icon-36x36.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="./favicon/android-icon-48x48.png">
+  <link rel="icon" type="image/png" sizes="72x72" href="./favicon/android-icon-72x72.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./favicon/android-icon-96x96.png">
+  <link rel="icon" type="image/png" sizes="144x144" href="./favicon/android-icon-144x144.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
+  <link rel="manifest" href="./favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./favicon/ms-icon-70x70.png">
+  <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="./favicon/ms-icon-150x150.png">
+  <meta name="msapplication-TileImage" content="./favicon/ms-icon-310x310.png">
+  <meta name="theme-color" content="#ffffff">
   <!-- 카카오맵 API KEY -->
 
   <!-- TODO: src 대체하기->  process.env.REACT_APP_KAKAO_API_KEY  -->
@@ -13,6 +39,7 @@
   <!-- 구글 아이콘 -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
   <title>편식</title>
 
   <!-- Kakao Share -->
