--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,17 +32,26 @@
   <meta name="msapplication-TileImage" content="./favicon/ms-icon-150x150.png">
   <meta name="msapplication-TileImage" content="./favicon/ms-icon-310x310.png">
   <meta name="theme-color" content="#ffffff">
-  <!-- Kakao Share -->
-  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
-    integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh"
-    crossorigin="anonymous"></script>
+
+
+
   <!-- 카카오맵 API KEY -->
   <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_API_KEY%&libraries=services,clusterer"></script>
+
   <!-- 구글 아이콘 -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>편식</title>
+</head>
+
+
+
+<title>편식</title>
+
+<!-- Kakao Share -->
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
+  integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh" crossorigin="anonymous"></script>
 </head>
 
 <body>
